# kmp-xlog

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle.kts  build_apple.sh  build_ios.sh  build_xlog_android.sh  build_xlog_apple.sh  build_xlog_ios.sh  gradle.properties  publish_android.sh  publish_apple_cocoapods.sh  publish_ios.sh  publish_linux.sh  publish_windows.bat  settings.gradle.kts  versions.properties
.github/workflows/: ci.yaml  test_and_run_demo.yaml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: Constants.kt  convention.publication.gradle.kts
example/androidApp/: build.gradle.kts
example/androidApp/src/main/: AndroidManifest.xml
example/iosApp/: Podfile  project.yml
example/iosApp/iosApp/: ContentView.swift  Info.plist
example/iosApp/iosApp.xcodeproj/: project.pbxproj
example/iosApp/iosApp.xcodeproj/xcuserdata/piasy.xcuserdatad/xcschemes/: xcschememanagement.plist
example/macApp/: Podfile  project.yml
example/macApp/macApp/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.m  main.m
example/shared/: build.gradle  build.gradle.kts
example/shared/src/wasmJsMain/resources/: index.html
example/shared/src/webMain/resources/: index.html
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
kmp-xlog/: build.gradle  build.gradle.kts
kmp-xlog-api/: build.gradle.kts
kmp-xlog-api/src/commonMain/kotlin/com/piasy/kmp/xlog/: Logging.kt  Platform.kt
kmp-xlog-api/src/iosMain/kotlin/com/piasy/kmp/xlog/: Platform.ios.kt
kmp-xlog-api/src/jsMain/kotlin/com/piasy/kmp/xlog/: Platform.js.kt
kmp-xlog-api/src/jvmMain/kotlin/com/piasy/kmp/xlog/: Platform.jvm.kt
kmp-xlog-api/src/linuxMain/kotlin/com/piasy/kmp/xlog/: Platform.linux.kt
kmp-xlog-api/src/macosMain/kotlin/com/piasy/kmp/xlog/: Platform.macos.kt
kmp-xlog-api/src/mingwMain/kotlin/com/piasy/kmp/xlog/: Platform.mingw.kt
kmp-xlog-api/src/wasmJsMain/kotlin/com/piasy/kmp/xlog/: Platform.wasmJs.kt
kmp-xlog/src/appleMain/frameworks/mars.xcframework/: Info.plist
kmp-xlog/src/appleMain/objc/: PSYMarsXLog.h  PSYMarsXLog.mm
kmp-xlog/src/cppCommon/cinterop/: xlog.def
kmp-xlog/src/cppCommon/cpp/: CMakeLists.txt  MarsXLog.cpp  MarsXLog.h  test.cpp
kmp-xlog/src/iosMain/: project.yml
kmp-xlog/src/iosMain/frameworks/mars.xcframework/: Info.plist
kmp-xlog/src/iosMain/kmp_xlog.xcodeproj/: project.pbxproj
kmp-xlog/src/macosMain/: project.yml
kmp-xlog/src/macosMain/kmp_xlog.xcodeproj/: project.pbxproj
kmp-xlog/src/objcCommon/cinterop/: xlog.def
kmp-xlog/src/objcCommon/frameworks/mars.xcframework/: Info.plist
scripts/: build_apple.sh  build_ios_demo.sh  build_mac_demo.sh  build_xlog_android.sh  build_xlog_apple.sh  build_xlog_linux.sh  build_xlog_windows.bat  publish_apple_cocoapods.sh  publish_linux.sh  publish_others.sh  publish_windows.bat  setup_apple_demo.sh
(+29 files in other folders)
